kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: login-app
  labels:
    name: login-app
    app: login-application
