kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-app-ingress
  namespace: login-app
  annotations:
    # REMOVED ssl-redirect annotations - this was causing the loop!
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: login.talhasghar.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: login-app-service
            port:
              number: 80
